wordpress/mysql-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql:5.6
          ports:
            - containerPort: 3306
              name: mysql-container
          volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-volume
          emptyDir: {}
