wordpress/mysql-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-service
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  clusterIP: None
  selector:
    app: wordpress
    tier: mysql
