wordpress/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-service
spec:
  type: ClusterIP
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
  selector:
    app: mysql
    tier: wordpress
