wordpress/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress-service
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: clusterIP
