wordpress/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: "dineshtamang.com"
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: wordpress-service
              port: 
                number: 80
